--- a/projects.html
+++ b/projects.html
@@ -126,6 +126,20 @@
               <p>A visual exploration of New York City's Citibike usage patterns, specially centered on its rebalancing issues.</p>
             </a>
           </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/taxiVisualizations.html">
+              <img class="img-responsive" src="assets/img/thumbs/TaxiVisualizations.png" alt="thumb">
+              <h2>NYC TAXI VISUALIZATIONS</h2>
+              <p>A series of video animations based on taxi activity in New York City. Through them we can see the pulse of the city and the imbalances between origins and destinations.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/hereNow.html">
+              <img class="img-responsive" src="assets/img/thumbs/hereNow.png" alt="thumb">
+              <h2>HERE NOW!</h2>
+              <p>Social Media and the Psychological City - An early study of check-in data, trying to visualize it and to understand what it can tell us about our cities.</p>
+            </a>
+          </div>
         </div>
       </div>
       <footer class="bs-docs-footer">
