--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://juanfrans.github.io/juanfrans_site/">JUAN FRANCISCO SALDARRIAGA</a>
+            <a class="navbar-brand" href="index.html">JUAN FRANCISCO SALDARRIAGA</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
