--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://juanfrans.github.io/juanfrans_site/">JUAN FRANCISCO SALDARRIAGA</a>
+            <a class="navbar-brand" href="index.html">JUAN FRANCISCO SALDARRIAGA</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -183,6 +183,9 @@
             </li>
             <li>
               <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Presented at the <a href="https://www.buffalo.edu/transinfo/Events/2016Symposium.html">Second Annual Symposium on Transportation Informatics</a>, Arlington, Virginia, 2016.</p>
+            </li>
+            <li>
+              <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Accepted for presentation at the <a href="http://www.trb.org/AnnualMeeting/AnnualMeeting.aspx">Transportation Research Board 2017 Annual Meeting</a>, Washington, D.C., 2017.</p>
             </li>
             <li>
               <p class="cv-item"><b>Activity Mapping - Columbia Data Science Society</b> - Saldarriaga, J. - Lecture for the Columbia Data Science Society students at Columbia University, New York, New York, 2016.</p>
