--- a/projects/barcelonaCycleChallenge.html
+++ b/projects/barcelonaCycleChallenge.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="Juan Francisco Saldarraiga is a researcher at the Center for Spatial Research, at Columbia University. His research happens at the intersection of data, GIS, urbanism, architecture and the humanities.">
-  <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york"
+  <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york">
   <meta name="author" content="Juan Francisco Saldarriaga">
   <title>Juanfrans</title>
 
