--- a/about.html
+++ b/about.html
@@ -59,6 +59,7 @@
               <li><a href="index.html">HOME</a></li>
               <li><a href="projects.html">PROJECTS</a></li>
               <li class="active"><a href="about.html">ABOUT<span class="sr-only">(current)</span></a></li>
+              <li><a href="news.html">NEWS & APPEARANCES</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -263,6 +264,9 @@
           <p class="cv-subtitle">GRANTS & AWARDS</p>
           <ul class="cv-list">
             <li>
+              <p class="cv-item"><b>Conflict Urbanism: Colombia</b> - Awarded best academic visualization at the <a href="http://cityvis.io/">CitiViz</a> competition organized by <a href="https://t.co/lRv2fgnUDO">Habitat X Change</a> during UN's Habitat 3 summit, 2016.</p>
+            </li>
+            <li>
               <p class="cv-item">Principal Investigator - <b>Points Unknown: New Frameworks for Investigation and Creative Expression Through Mapping</b> - A grant to create and implement courses that combine mapping, narrative and storytelling in the School of Journalism and in the Graduate School of Architecture, Planning and Preservation at Columbia University. Collaboratory Grant, Columbia University, 2016 - 2017.</p>
             </li>
             <li>
@@ -271,10 +275,7 @@
             <li>
               <p class="cv-item">Participant - <b><a href="http://brown.columbia.edu/magic">Science Surveyor - Context On Deadline</a></b> - A grant to create the Science Surveyor tool for science journalists. Brown Institute for Media Innovation Flagship Project Magic Grant 2015 - 2016, and Brown Institute for Media Innovation 2014 - 2015 Magic Grant.</p>
             </li>
-
           </ul>
-
-
         </div>
       </div>
       <footer class="bs-docs-footer">
