--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
   <script>try{Typekit.load();}catch(e){}</script>
 
   <!-- Google Analytics tracking code -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-27897156-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-27897156-1', 'auto');
+    ga('send', 'pageview');
 
-</script>
+  </script>
+  <script type="text/javascript" src="js/p5.min.js"></script>
+  <script type='text/javascript' src="js/p5.dom.js"></script>
+  <!--
+  <script language="javascript" type="text/javascript" src="js/test.js"></script>
+-->
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,6 +66,7 @@
               <li class="active"><a href="index.html">HOME<span class="sr-only">(current)</span></a></li>
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
+              <li><a href="news.html">NEWS & APPEARANCES</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -68,7 +74,7 @@
       </nav>
 
       <!-- *********** REST ************* -->
-      <div class="container">
+      <div class="container" id="test">
         <div class="summary">
           <p>Hi! I'm <b>Juan Francisco Saldarriaga</b>. I am a researcher at the <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a> at Columbia University and an adjunct assistant professor of urban planning and architecture at the <a href="http://www.arch.columbia.edu/"> Graduate School of Architecture, Planning and Preservation (GSAPP)</a>.</p>
           <p>I do research at the intersection of data, GIS, urbanism, architecture and the humanities and I teach graduate level <a href="https://github.com/juanfrans-courses">seminars</a> on mapping, advanced GIS and data visualization. In the past I've worked as a research scholar at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, an architectural designer for <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a> and <a href="http://www.dgtarchitects.com/">D.G.T. Architects</a>, and as the GIS project coordinator for the <a href="http://www.catholiccharitiesny.org/">Catholic Charities</a>. You can also find me on Twitter <a href="https://twitter.com/juanfrans">@juanfrans</a> and on Github at <a href="https://github.com/juanfrans">github.com/juanfrans</a>. Or email me <a href="mailto:juanfrans@gmail.com">here</a>.</p>
