--- a/projects/bayAreaBikeShare.html
+++ b/projects/bayAreaBikeShare.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="Juan Francisco Saldarraiga is a researcher at the Center for Spatial Research, at Columbia University. His research happens at the intersection of data, GIS, urbanism, architecture and the humanities.">
+  <meta name="description" content="This visualization analyzes the 20 most popular bike sharing stations in San Francisco in four different areas, and in doing so, it creates a more detailed, nuanced and complex image of the Bay Area Bike Share System. The diagrams are based on the traditional pie chart, but they vary and evolve to better represent each station's attributes. Two systems of information interact here in order to outline each station's unique profile and deliver insights: one station popularity network and one based on usage frequency and customer type.">
   <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york">
   <meta name="author" content="Juan Francisco Saldarriaga">
   <title>Juanfrans</title>
@@ -59,6 +59,7 @@
               <li><a href="../index.html">HOME</a></li>
               <li><a href="../projects.html">PROJECTS</a></li>
               <li><a href="../about.html">ABOUT</a></li>
+              <li><a href="../news.html">NEWS & APPEARANCES</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
