--- a/news.html
+++ b/news.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="Part of the Bay Area Bike Share Data Challenge, this projects visualizes different characteristics of every single station in the system. Based on a matrix of circles, the projects makes it easy to distinguish patterns and outlier stations, at the same time creating visually compelling images.">
+  <meta name="description" content="Juan Francisco Saldarraiga is a researcher at the Center for Spatial Research, at Columbia University. His research happens at the intersection of data, GIS, urbanism, architecture and the humanities.">
   <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york">
   <meta name="author" content="Juan Francisco Saldarriaga">
   <title>Juanfrans</title>
 
   <!-- Bootstrap -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/site-specific.css" rel="stylesheet" media="screen">
+  <link href="css/site-specific.css" rel="stylesheet" media="screen">
 
   <!-- Loading fonts from Adobe Typekit -->
   <script src="//use.typekit.net/uzk7kzt.js"></script>
@@ -51,15 +51,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://juanfrans.github.io/juanfrans_site/">JUAN FRANCISCO SALDARRIAGA</a>
+            <a class="navbar-brand" href="index.html">JUAN FRANCISCO SALDARRIAGA</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="../index.html">HOME</a></li>
-              <li><a href="../projects.html">PROJECTS</a></li>
-              <li><a href="../about.html">ABOUT</a></li>
-              <li><a href="../news.html">NEWS & APPEARANCES</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="projects.html">PROJECTS</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li class="active"><a href="news.html">NEWS & APPEARANCES<span class="sr-only">(current)</span></a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -68,43 +68,62 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_01.jpg">
-          </div>
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_02.jpg">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_03.jpg">
-          </div>
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_04.jpg">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_05.jpg">
-          </div>
-          <div class="col-md-6">
-            <img class="img-responsive losO" src="../assets/img/O_06.jpg">
-          </div>
+        <div class="subtitle">
+          <p>LATEST NEWS & APPEARANCES</p>
         </div>
       </div>
       <div class="container">
-        <div class="project-title">
-          <p>LOs O</p>
+        <div class="row">
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/nacis2016.html">
+              <img class="img-responsive" src="assets/img/thumbs/nacis2016.png" alt="thumb">
+              <h2>NACIS CONFERENCE 2016</h2>
+              <p>I'll be presenting our research on 'deadhead' taxi trips at the North American Cartographic Information Society annual conference on October 2016 in Colorado Springs.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/afterbelonging.html">
+              <img class="img-responsive" src="assets/img/thumbs/afterbelonging.png" alt="thumb">
+              <h2 class="project-title">OSLO ARCHITECTURE TREINNALE</h2>
+              <p class="project-summary">Our project Conflict Urbanism: Colombia will be on view at the Oslo Architecture Triennale from September 8 to November 27, 2016.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/d4gx2016.html">
+              <img class="img-responsive" src="assets/img/thumbs/d4gx2016.png" alt="thumb">
+              <h2 class="project-title">D4GX 2016 - BLOOMBERG</h2>
+              <p class="project-summary">I presented our research on taxi payment menthods and its relationship to unbanked and immigrant populations at the Data for Good Exchange conference at Bloomberg on September 2016.</p>
+            </a>
+          </div>
         </div>
-        <div class="project-subtitle">
-          <p>Created in collaboration with Natasa Papadi.</p>
-        </div>
-        <div class="project-description">
-          <p>Part of the Bay Area Bike Share Data Challenge, this projects visualizes different characteristics of every single station in the system. Based on a matrix of circles, the projects makes it easy to distinguish patterns and outlier stations, at the same time creating visually compelling images.</p>
+        <div class="row">
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/artDataViz.html">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XjW4mvMXTXg"></iframe>
+              </div>
+              <h2>THE ART OF DATA VISUALIZATION</h2>
+              <p>I presented some of our recent projects in my talk 'Activity Mapping' during the Art of Data Visualization conference held at Columbia University on April 2016.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/cdss.html">
+              <img class="img-responsive" src="assets/img/thumbs/cdss.png" alt="thumb">
+              <h2 class="project-title">COLUMBIA DATA SCIENCE SOCIETY</h2>
+              <p class="project-summary">I present some of our current and past projects at a lecture for the Columbia Data Science Society, on April 2016.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/uncertaintiesData.html">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/90226947"></iframe>
+              </div>
+              <h2>THE UNCERTAINTIES OF DATA</h2>
+              <p>I gave a talk titled 'The Uncertainties of Data' during the City as Resource lecture series at the Department of Design at Zurich University of the Arts on February 2014.</p>
+            </a>
+          </div>
         </div>
       </div>
-
       <footer class="bs-docs-footer">
         <div class="container">
           <div class="row">
@@ -129,6 +148,6 @@
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="../js/bootstrap.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
     </body>
     </html>
