--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,7 @@
               <li><a href="index.html">HOME</a></li>
               <li class="active"><a href="projects.html">PROJECTS<span class="sr-only">(current)</span></a></li>
               <li><a href="about.html">ABOUT</a></li>
+              <li><a href="news.html">NEWS & APPEARANCES</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
