--- a/projects/hereNow.html
+++ b/projects/hereNow.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="Juan Francisco Saldarraiga is a researcher at the Center for Spatial Research, at Columbia University. His research happens at the intersection of data, GIS, urbanism, architecture and the humanities.">
+  <meta name="description" content="Social Media and the Psychological City - An early study of check-in data, trying to visualize it and to understand what it can tell us about our cities.">
   <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york">
   <meta name="author" content="Juan Francisco Saldarriaga">
   <title>Juanfrans</title>
@@ -59,6 +59,7 @@
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../projects.html">PROJECTS</a></li>
                 <li><a href="../about.html">ABOUT</a></li>
+              <li><a href="../news.html">NEWS & APPEARANCES</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
