--- a/about.html
+++ b/about.html
@@ -118,6 +118,9 @@
               <p class="cv-item"><b><a href="https://science-surveyor.github.io/">Science Surveyor</a></b> - Context on Deadline - An interactive application providing context information for science journalists on a deadline. Holloway, M., Tenen, D., Kurgan, L., Jurafsky, D., McFarland, D., Saldarriaga, J., Basic, G. (in progress).</p>
             </li>
             <li>
+              <p class="cv-item"><b>Trip Generation by Multiple Modes</b> - Combining data to measure demand from shared travel activities. Saldarriaga, J., King, D. (in progress).</p>
+            </li>
+            <li>
               <p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/banking-divide-taxi-access-evidence-new-york-city">Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</a></b> - A statistical analysis of taxicab payment methods and its correlation with banking service accessibility. Saldarriaga, J., King, D., 2015 - 2016.</p>
             </li>
             <li>
@@ -177,16 +180,19 @@
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
             <li>
-              <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Accepted for presentation at the <a href="https://c.ymcdn.com/sites/www.acsp.org/resource/resmgr/conference/2016_Book_of_Accepted_Abstra.pdf">ACSP 2016 56th Annual Conference</a>, Portland, Oregon, 2016.</p>
+              <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Accepted for presentation at the <a href="http://www.trb.org/AnnualMeeting/AnnualMeeting.aspx">Transportation Research Board 2017 Annual Meeting</a>, Washington, D.C., 2017.</p>
+            </li>
+            <li>
+              <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Presented at the <a href="https://c.ymcdn.com/sites/www.acsp.org/resource/resmgr/conference/2016_Book_of_Accepted_Abstra.pdf">ACSP 2016 56th Annual Conference</a>, Portland, Oregon, 2016.</p>
+            </li>
+            <li>
+              <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Presented at the <a href="https://nacis2016.sched.org/">NACIS Annual Conference</a>, Colorado Springs, Colorado, 2016.</p>
             </li>
             <li>
               <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Presented at <a href="https://www.bloomberg.com/company/d4gx/">Bloomberg's Data for Good Exchange conference</a>, New York, New York, 2016.</p>
             </li>
             <li>
               <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Presented at the <a href="https://www.buffalo.edu/transinfo/Events/2016Symposium.html">Second Annual Symposium on Transportation Informatics</a>, Arlington, Virginia, 2016.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - Saldarriaga, J., King, D. - Accepted for presentation at the <a href="http://www.trb.org/AnnualMeeting/AnnualMeeting.aspx">Transportation Research Board 2017 Annual Meeting</a>, Washington, D.C., 2017.</p>
             </li>
             <li>
               <p class="cv-item"><b>Activity Mapping - Columbia Data Science Society</b> - Saldarriaga, J. - Lecture for the Columbia Data Science Society students at Columbia University, New York, New York, 2016.</p>
@@ -238,6 +244,9 @@
 
           <p class="cv-subtitle">TEACHING & OTHER ACTIVITIES</p>
           <ul class="cv-list">
+            <li>
+              <p class="cv-item"><b><a href="https://github.com/juanfrans-courses/dataViz_arch_hum/blob/master/Spring_2017/Syllabus.md">Data Visualization for Architecture, Urbanism and the Humanities</a></b> - An introduction to data visualization theory and methods for students entirely new to the fields of computation and information design. Part of the Center for Spatial Research Mellon Grant on Conflict Urbanism. Columbia University (interdisciplinary, undergraduate and graduate levels), 2017.</p>
+            </li>
             <li>
               <p class="cv-item"><b><a href="https://github.com/juanfrans-courses/mapping_arch_hum/blob/master/Spring_2016/Syllabus.md">Mapping for Architecture, Urbanism and the Humanities</a></b> - An interdisciplinary introductory mapping course combining methods and topics fro architecture, urbanism and the humanities. Part of the Center for Spatial Research Mellon Grant on Conflict Urbanism. Columbia University (interdisciplinary, undergraduate and graduate levels), 2016.</p>
             </li>
