--- a/news.html
+++ b/news.html
@@ -78,7 +78,7 @@
             <a class="project-thumb" href="news/nacis2016.html">
               <img class="img-responsive" src="assets/img/thumbs/nacis2016.png" alt="thumb">
               <h2>NACIS CONFERENCE 2016</h2>
-              <p>I'll be presenting our research on 'deadhead' taxi trips at the North American Cartographic Information Society annual conference on October 2016 in Colorado Springs.</p>
+              <p>I presented our research on 'deadhead' taxi trips at the North American Cartographic Information Society annual conference on October 2016 in Colorado Springs.</p>
             </a>
           </div>
           <div class="col-md-4">
