--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
           <p class="cv-subtitle">PUBLICATIONS</p>
           <ul class="cv-list">
             <li>
-              <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Accepted for publication on the <a href="http://scholarcommons.usf.edu/jpt/">Journal of Public Transportation</a>, Volume 20.1, March 2017.</p>
+              <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Published in the <a href="http://scholarcommons.usf.edu/cgi/viewcontent.cgi?article=1559&context=jpt">Journal of Public Transportation</a>, Volume 20.1, March 2017.</p>
             </li>
             <li>
               <p class="cv-item"><b>The Haven Project - Metrics</b> - Kurgan, L., Saldarriaga, J., Izen, J., New York Restoration Project - Published in <a href="http://www.lafrontiers.com/">Landscape Architecture Frontiers</a>, issue 4, 2016.</p>
