--- a/about.html
+++ b/about.html
@@ -152,6 +152,9 @@
           <p class="cv-subtitle">PUBLICATIONS</p>
           <ul class="cv-list">
             <li>
+              <p class="cv-item"><b>Visualizing Conflict: Possibilities for Urban Research</b> - Saldarriaga, J., Kurgan, L., Brawley, D. - Published in the <a href="http://www.cogitatiopress.com/urbanplanning/article/view/880"> Urban Planning Open Access Journal</a>, Volume 2, No 1, 2017. <a href="http://www.cogitatiopress.com/urbanplanning/article/view/880/880">View PDF</a>.</p>
+            </li>
+            <li>
               <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Published in the <a href="http://scholarcommons.usf.edu/jpt/vol20/iss1/1/">Journal of Public Transportation</a>, Volume 20.1, March 2017. <a href="http://scholarcommons.usf.edu/cgi/viewcontent.cgi?article=1559&context=jpt">Download PDF</a>.</p>
             </li>
             <li>
@@ -179,6 +182,9 @@
 
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
+            <li>
+              <p class="cv-item"><b>Research Through Visualization</b> = Saldarriaga, J. - Lecture for the Research Methods course at the Masters of Science of Architecture at Penn State University, State College, PA, 2017.</p>
+            </li>
             <li>
               <p class="cv-item"><b>Conflict Urbanism: Colombia</b> - Kurgan, L., Saldarriaga, J., Rettberg, A. - Presented at the <a href="http://www.tapestryconference.com/">Tapestry</a> conference, St. Augustin, FL, 2017.</p>
             </li>
