--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
             <li>
-              <p class="cv-item"><b>Research Through Visualization</b> = Saldarriaga, J. - Lecture for the Research Methods course at the Masters of Science of Architecture at Penn State University, State College, PA, 2017.</p>
+              <p class="cv-item"><b>Research Through Visualization</b> - Saldarriaga, J. - Lecture for the Research Methods course at the Masters of Science of Architecture at Penn State University, State College, PA, 2017.</p>
             </li>
             <li>
               <p class="cv-item"><b>Conflict Urbanism: Colombia</b> - Kurgan, L., Saldarriaga, J., Rettberg, A. - Presented at the <a href="http://www.tapestryconference.com/">Tapestry</a> conference, St. Augustin, FL, 2017.</p>
