--- a/about.html
+++ b/about.html
@@ -272,6 +272,9 @@
               <p class="cv-item">Member of the <b><a href="http://xpmethod.plaintext.in/">Group for Experimental Methods in the Humanities</a></b> at Columbia University.</p>
             </li>
             <li>
+              <p class="cv-item">Member of <b><a href="https://digitalhumanities.columbia.edu/">Columbia Digital Humanities</a></b> at the Graduate School of Arts and Sciences, Columbia University.</p>
+            </li>
+            <li>
               <p class="cv-item">I maintain, support and update the Geographic Information Systems Database for the Graduate School of Architecture, Planning and Preservation at Columbia University, 2013 - present.</p>
             </li>
             <li>
