--- a/about.html
+++ b/about.html
@@ -183,6 +183,12 @@
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
             <li>
+              <p class="cv-item"><b>Conflict Urbanism</b> - Saldarriaga, J. - Lecture for the <a href="https://las.depaul.edu/centers-and-institutes/studio-chi/Pages/news-events.aspx">Inaugural Programming "Foundations of the Digital, Foundations in the Humanities: Race, Gender, Class"</a> lecture series at Studio Chi, DePaul University, Chicago, 2017.</p>
+            </li>
+            <li>
+              <p class="cv-item"><b>Conflict Urbanism: Visualizing Conflict Data Through Mapping and Spatial Analysis</b> - Saldarriaga, J. - Lecture and workshop for the <a href="http://library.columbia.edu/news/events/art-or-knowledge/dv_program.html">Art of Data Visualization: Art or Knowledge Conference</a> at Columbia University, New York, New York, 2017.</p>
+            </li>
+            <li>
               <p class="cv-item"><b>Research Through Visualization</b> - Saldarriaga, J. - Lecture for the Research Methods course at the Masters of Science of Architecture at Penn State University, State College, PA, 2017.</p>
             </li>
             <li>
