--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
               <p class="cv-item"><b>Visualizing Conflict: Possibilities for Urban Research</b> - Saldarriaga, J., Kurgan, L., Brawley, D. - Published in the <a href="http://www.cogitatiopress.com/urbanplanning/article/view/880"> Urban Planning Open Access Journal</a>, Volume 2, No 1, 2017. <a href="http://www.cogitatiopress.com/urbanplanning/article/view/880/880">View PDF</a>.</p>
             </li>
             <li>
-              <p class="cv-item"><b>Displacement</b> - Saldarriaga, J. - Published in the <a href="http://www.yucamag.com/issue_i/"> Yuca Magazine, The Architecture Alibi & Migrations Issue</a>, Issue 2, 2017.</p>
+              <p class="cv-item"><b>Displacement</b> - Saldarriaga, J. - Published in the <a href="http://www.yucamag.com/issue_i/"> Yuca Magazine</a>, The Architecture Alibi & Migrations Issue, Issue 2, 2017.</p>
             </li>
             <li>
               <p class="cv-item"><b>Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</b> - Saldarriaga, J., King, D. - Published in the <a href="http://scholarcommons.usf.edu/jpt/vol20/iss1/1/">Journal of Public Transportation</a>, Volume 20.1, March 2017. <a href="http://scholarcommons.usf.edu/cgi/viewcontent.cgi?article=1559&context=jpt">Download PDF</a>.</p>
