--- a/about.html
+++ b/about.html
@@ -187,6 +187,9 @@
           <p class="cv-subtitle">LECTURES & PRESENTATIONS</p>
           <ul class="cv-list">
             <li>
+              <p class="cv-item"><b>Spatial Regulation of Taxicab Services: Measuring Excess Travel from New York City</b> - Saldarriaga, J., King, D., - Presented at the <a href="http://wstlur.org/symposium/2017/">World Symposium on Transport and Land Use Research</a>, Brisbane, Australia, 2017.</p>
+            </li>
+            <li>
               <p class="cv-item"><b>Conflict Urbanism</b> - Saldarriaga, J. - Lecture for the <a href="https://las.depaul.edu/centers-and-institutes/studio-chi/Pages/news-events.aspx">Inaugural Programming "Foundations of the Digital, Foundations in the Humanities: Race, Gender, Class"</a> lecture series at Studio Chi, DePaul University, Chicago, 2017.</p>
             </li>
             <li>
