--- a/news.html
+++ b/news.html
@@ -75,6 +75,29 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
+            <a class="project-thumb" href="news/prMapathon.html">
+              <img class="img-responsive" src="assets/img/thumbs/prMapathon.png" alt="thumb">
+              <h2>PUERTO RICO MAPATHON</h2>
+              <p>Along with the folks at the Experimental Methods Group and the Libraries at Columbia University we held an OSM Mapathon to help out with the disaster recovery in Puerto Rico, September 2017.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/nacis2017.html">
+              <img class="img-responsive" src="assets/img/thumbs/interactiveMap.png" alt="thumb">
+              <h2>NACIS CONFERENCE 2017</h2>
+              <p>I presented our Conflict Urbanism: Colombia & Aleppo projects at the North American Cartographic Information Society annual conference on October 2017 in Montreal, Canada.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="news/tapestry2017.html">
+              <img class="img-responsive" src="assets/img/thumbs/interactiveViz.png" alt="thumb">
+              <h2 class="project-title">TAPESTRY CONFERENCE 2017</h2>
+              <p class="project-summary">We demo-ed our Conflict Urbanism: Colombia project at the Tapestry Conference on March 2017 in St. Augustine, Florida.</p>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
             <a class="project-thumb" href="news/nacis2016.html">
               <img class="img-responsive" src="assets/img/thumbs/nacis2016.png" alt="thumb">
               <h2>NACIS CONFERENCE 2016</h2>
@@ -129,8 +152,8 @@
           <div class="row">
             <div class="col-md-4">
               <p class="footer-subtitle">JUAN FRANCISCO SALDARRIAGA</p>
-              <p class="footer-item">3495 Broadway</p>
-              <p class="footer-item">New York, NY 10031</p>
+              <p class="footer-item">150 6th Avenue</p>
+              <p class="footer-item">Brooklyn, NY 11217</p>
               <p class="footer-item">United States</p>
             </div>
             <div class="col-md-4">
@@ -142,7 +165,7 @@
           </div>
         </div>
       </footer>
-      
+
 
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
