--- a/projects/downtownProject.html
+++ b/projects/downtownProject.html
@@ -91,8 +91,8 @@
           <div class="row">
             <div class="col-md-4">
               <p class="footer-subtitle">JUAN FRANCISCO SALDARRIAGA</p>
-              <p class="footer-item">3495 Broadway</p>
-              <p class="footer-item">New York, NY 10031</p>
+              <p class="footer-item">150 6th Avenue</p>
+              <p class="footer-item">Brooklyn, NY 11217</p>
               <p class="footer-item">United States</p>
             </div>
             <div class="col-md-4">
@@ -104,7 +104,7 @@
           </div>
         </div>
       </footer>
-      
+
 
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
