--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             <li><p class="cv-item"><b>Modeling Social Justice Issues in Urban Zones Using Big Data: Evidence from Bikeshare and Taxicab Data</b> - A statistical analysis of the spatial distribution of bike share and taxicab trips and their relation to social justice issues. King, D., Peters, J., Davidson, A., Saldarriaga, J., 2014.</p></li>
             <li><p class="cv-item"><b><a href="http://spatialinformationdesignlab.org/project_sites/port_to_port/">Port to Port</a></b> - An interactive data visualization and mapping analysis of 6 years of oil shipment routes to and from U.S. ports. Kurgan, L., Saldarriaga, J., Berner, A., Murray., S., 2014.</p></li>
             <li><p class="cv-item"><b><a href="http://cargocollective.com/juanfrans/NYC-TAXI-ACTIVITY">NYC Taxi Activity</a></b> - Data visualization animations illustrating movement and imbalance patterns in New York City taxicabs. Saldarriaga, J., King, D., Peters, J., 2012.</p></li>
-            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/here-now-social-media-and-psychological-city">Here Now! Social Media And The Psychological City</a></b> - Data visualization and mapping project studying social median check-ins in New York City. Williams, S., Saldarriaga, J., Bullen, G., Tan, F., Youse, N., 2011.</p></li>
+            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/here-now-social-media-and-psychological-city">Here Now! Social Media And The Psychological City</a></b> - Data visualization and mapping project studying social media check-ins in New York City. Williams, S., Saldarriaga, J., Bullen, G., Tan, F., Youse, N., 2011.</p></li>
           </ul>
 
           <p class="cv-subtitle">PUBLICATIONS</p>
