--- a/news.html
+++ b/news.html
@@ -83,7 +83,9 @@
           </div>
           <div class="col-md-4">
             <a class="project-thumb" href="news/nacis2017.html">
-              <img class="img-responsive" src="assets/img/thumbs/interactiveMap.png" alt="thumb">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/S_fYWygTp0I?rel=0" allowfullscreen></iframe>
+              </div>
               <h2>NACIS CONFERENCE 2017</h2>
               <p>I presented our Conflict Urbanism: Colombia & Aleppo projects at the North American Cartographic Information Society annual conference on October 2017 in Montreal, Canada.</p>
             </a>
@@ -123,7 +125,7 @@
           <div class="col-md-4">
             <a class="project-thumb" href="news/artDataViz.html">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XjW4mvMXTXg"></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XjW4mvMXTXg" allowfullscreen></iframe>
               </div>
               <h2>THE ART OF DATA VISUALIZATION</h2>
               <p>I presented some of our recent projects in my talk 'Activity Mapping' during the Art of Data Visualization conference held at Columbia University on April 2016.</p>
