--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
+            <a class="project-thumb" href="projects/conflictUrbanismColombia.html">
+              <img class="img-responsive" src="assets/img/thumbs/interactiveMapColombia.png" alt="thumb">
+              <h2 class="project-title">CONFLICT URBANISM: COLOMBIA</h2>
+              <p class="project-summary">An interactive mapping, data visualization, and spatial analysis project that examines the Colombian conflict and tries to understand its patterns and ramifications.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/environmental.html">
+              <img class="img-responsive" src="assets/img/thumbs/environmental.png" alt="thumb">
+              <h2 class="project-title">SPATIAL REGULATION OF TAXICAB SERVICES</h2>
+              <p class="project-summary">A statistical and mapping analysis of the environmental cost associated with the spatial regulation of taxicabs in New York City.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/access.html">
+              <img class="img-responsive" src="assets/img/thumbs/unbanked_thumb.png" alt="thumb">
+              <h2 class="project-title">ACCESS TO TAXICABS FOR UNBANKED HOUSEHOLDS</h2>
+              <p class="project-summary">A statistical analysis and mapping project of taxicab payment methods and its correlation with banking service accessibility.</p>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
             <a class="project-thumb" href="projects/gsappAP.html">
               <img class="img-responsive" src="assets/img/thumbs/GSAPP_AP.png" alt="thumb">
               <h2>GSAPP ALUMNI PROJECT</h2>
