--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,56 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
+            <a class="project-thumb" href="projects/conflictUrbanismColombia.html">
+              <img class="img-responsive" src="assets/img/thumbs/interactiveMapColombia.png" alt="thumb">
+              <h2 class="project-title">CONFLICT URBANISM: COLOMBIA</h2>
+              <p class="project-summary">An interactive mapping, data visualization, and spatial analysis project that examines the Colombian conflict and tries to understand its patterns and ramifications.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/environmental.html">
+              <img class="img-responsive" src="assets/img/thumbs/environmental.png" alt="thumb">
+              <h2 class="project-title">SPATIAL REGULATION OF TAXICAB SERVICES</h2>
+              <p class="project-summary">A statistical and mapping analysis of the environmental cost associated with the spatial regulation of taxicabs in New York City.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/access.html">
+              <img class="img-responsive" src="assets/img/thumbs/unbanked_thumb.png" alt="thumb">
+              <h2 class="project-title">ACCESS TO TAXICABS FOR UNBANKED HOUSEHOLDS</h2>
+              <p class="project-summary">A statistical analysis and mapping project of taxicab payment methods and its correlation with banking service accessibility.</p>
+            </a>
+          </div>
+        </div>
+        <!-- <div class="row">
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/gsappAP.html">
+              <img class="img-responsive" src="assets/img/thumbs/scienceSurveyor.png" alt="thumb">
+              <h2 class="project-title">SCIENCE SURVEYOR</h2>
+              <p class="project-summary">Using the abstract and citations of a peer-reviewed paper, Science Surveyor provides journalists context about that paper in several easy-to-read visualizations.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/roadToParis.html">
+              <img class="img-responsive" src="assets/img/thumbs/havenProject.png" alt="thumb">
+              <h2 class="project-title">THE HAVEN PROJECT</h2>
+              <p class="project-summary">An interactive mapping and data visualization project that analyzes health and environmental metrics for New York City, and the South Bronx in particular.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/barcelonaCycleChallenge.html">
+              <img class="img-responsive" src="assets/img/thumbs/portToPort.png" alt="thumb">
+              <h2 class="project-title">PORT TO PORT</h2>
+              <p class="project-summary">An interactive data visualization and mapping analysis of 6 years of oil shipment routes to and from U.S. ports.</p>
+            </a>
+          </div>
+        </div> -->
+        <div class="row">
+          <div class="col-md-4">
             <a class="project-thumb" href="projects/gsappAP.html">
               <img class="img-responsive" src="assets/img/thumbs/GSAPP_AP.png" alt="thumb">
-              <h2>GSAPP ALUMNI PROJECT</h2>
-              <p>Based on a survey of GSAPP's alumni, this interactive visualization provides insights into the school's professions and helps record the different paths its graduates have taken.</p>
+              <h2 class="project-title">GSAPP ALUMNI PROJECT</h2>
+              <p class="project-summary">Based on a survey of GSAPP's alumni, this interactive visualization provides insights into the school's professions and helps record the different paths its graduates have taken.</p>
             </a>
           </div>
           <div class="col-md-4">
@@ -100,8 +146,8 @@
           <div class="col-md-4">
             <a class="project-thumb" href="projects/downtownProject.html">
               <img class="img-responsive" src="assets/img/thumbs/Downtown_Project.png" alt="thumb">
-              <h2>DOWNTOWN PROJECT</h2>
-              <p>A short animation that visualizes public activity around Science City. Based on wifi access data, it charts the increasing number of people moving and working in downtown Vegas.</p>
+              <h2 class="project-title">DOWNTOWN PROJECT</h2>
+              <p class="project-summary">A short animation that visualizes public activity around Science City. Based on wifi access data, it charts the increasing number of people moving and working in downtown Vegas.</p>
             </a>
           </div>
           <div class="col-md-4">
@@ -123,22 +169,22 @@
           <div class="col-md-4">
             <a class="project-thumb" href="projects/citibikeRebalancing.html">
               <img class="img-responsive" src="assets/img/thumbs/Citibike_Rebalancing_Main.png" alt="thumb">
-              <h2>CITIBIKE REBALANCING STUDY</h2>
-              <p>A visual exploration of New York City's Citibike usage patterns, specially centered on its rebalancing issues.</p>
+              <h2 class="project-title">CITIBIKE REBALANCING STUDY</h2>
+              <p class="project-summary">A visual exploration of New York City's Citibike usage patterns, specially centered on its rebalancing issues.</p>
             </a>
           </div>
           <div class="col-md-4">
             <a class="project-thumb" href="projects/taxiVisualizations.html">
               <img class="img-responsive" src="assets/img/thumbs/TaxiVisualizations.png" alt="thumb">
-              <h2>NYC TAXI VISUALIZATIONS</h2>
-              <p>A series of video animations based on taxi activity in New York City. Through them we can see the pulse of the city and the imbalances between origins and destinations.</p>
+              <h2 class="project-title">NYC TAXI VISUALIZATIONS</h2>
+              <p class="project-summary">A series of video animations based on taxi activity in New York City. Through them we can see the pulse of the city and the imbalances between origins and destinations.</p>
             </a>
           </div>
           <div class="col-md-4">
             <a class="project-thumb" href="projects/hereNow.html">
               <img class="img-responsive" src="assets/img/thumbs/hereNow.png" alt="thumb">
-              <h2>HERE NOW!</h2>
-              <p>Social Media and the Psychological City - An early study of check-in data, trying to visualize it and to understand what it can tell us about our cities.</p>
+              <h2 class="project-title">HERE NOW!</h2>
+              <p class="project-summary">Social Media and the Psychological City - An early study of check-in data, trying to visualize it and to understand what it can tell us about our cities.</p>
             </a>
           </div>
         </div>
