--- a/projects/gsappAP.html
+++ b/projects/gsappAP.html
@@ -79,7 +79,7 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-          <div class="project-site-button">
+          <div class="project-site-button" style="background-color:#66CCCC">
             <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
