--- a/projects/conflictUrbanismColombia.html
+++ b/projects/conflictUrbanismColombia.html
@@ -80,7 +80,7 @@
         <div class="row">
           <div class="col-md-4">
           <div class="project-site-button" style="background-color:#ff7111cc">
-            <a href="//www.c4sr.columbia.edu/conflict-urbanism-colombia"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
+            <a href="http://c4sr.columbia.edu/conflict-urbanism-colombia"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
       </div>
